--- a/images/docker_images/packer-ansible/cloudbuild.yaml
+++ b/images/docker_images/packer-ansible/cloudbuild.yaml
@@ -8,11 +8,13 @@ steps:
         '--build-arg', 'PACKER_VERSION_SHA256SUM=${_PACKER_VERSION_SHA256SUM}',
         '--build-arg', 'ANSIBLE_VERSION=${_ANSIBLE_VERSION}',
         '.']
-substitutions:
-  _PACKER_VERSION: 1.5.5
-  _PACKER_VERSION_SHA256SUM: 07f28a1a033f4bcd378a109ec1df6742ac604e7b122d0316d2cddb3c2f6c24d1
-  _ANSIBLE_VERSION: 2.9.4
 
 images:
 - 'gcr.io/$PROJECT_ID/packer:latest'
 - 'gcr.io/$PROJECT_ID/packer:$_PACKER_VERSION'
+
+timeout: 3600s
+substitutions:
+  _PACKER_VERSION: 1.5.5
+  _PACKER_VERSION_SHA256SUM: 07f28a1a033f4bcd378a109ec1df6742ac604e7b122d0316d2cddb3c2f6c24d1
+  _ANSIBLE_VERSION: 2.9.4
