--- a/terraform/gcp/modules/network/tests/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild.yaml
@@ -2,34 +2,37 @@ steps:
   - id: 'terraform init'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["init"]
+    dir: '/terraform/gcp/modules/network/tests'
 
   - id: 'terraform worspace new'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["workspace", "new", "$PROJECT_ID"]
+    dir: '/terraform/gcp/modules/network/tests'
 
   - id: 'terraform worspace select'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["workspace", "select", "$PROJECT_ID"]
-
-  - id: 'ls'
-    name: 'ubuntu'
-    args: ["ls"]
+    dir: '/terraform/gcp/modules/network/tests'
 
   - id: 'terraform apply'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["apply", "--auto-approve"]
+    dir: '/terraform/gcp/modules/network/tests'
 
   - id: 'make attributes.yaml'
     name: 'ubuntu'
     args: ["sh", "make.sh"]
+    dir: '/terraform/gcp/modules/network/tests'
 
   - id: "packer build"
     name: 'gcr.io/$PROJECT_ID/inspec'
     args: ["exec", "./test-codes/", "-t", "gcp://", "--input-file", "attributes.yaml", "--chef-license", "accept"]
+    dir: '/terraform/gcp/modules/network/tests'
 
   - id: 'terraform destroy'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["destroy", "--force"]
+    dir: '/terraform/gcp/modules/network/tests'
 
 timeout: 3600s
 substitutions:
