[mod] change ls command

--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
-  - id: 'tree'
+  - id: 'ls'
     name: 'ubuntu'
-    args: ["tree"]
+    args: ["ls"]
 
   - id: 'copy'
     name: 'ubuntu'
