--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -8,7 +8,7 @@ steps:
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", "terraform/gcp/modules/network/tests"]
+    args: ["cp", "-r", "terraform/gcp/modules/network/tests", "."]
 
   - id: 'ls command default'
     name: 'ubuntu'
