--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -1,21 +1,10 @@
 steps:
-  - id: 'ls'
-    name: 'ubuntu'
-    args: ["ls", "terraform/gcp/modules/network/tests"]
-
   - id: 'copy'
     name: 'ubuntu'
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", "terraform/gcp/modules/network/tests", "."]
-
-  - id: 'ls command default'
-    name: 'ubuntu'
-    volumes:
-      - name: 'test'
-        path: '/tests'
-    args: ["ls"]
+    args: ["cp", "-r", "terraform/gcp/modules/network/tests/main/*", "."]
 
   - id: 'ls command tests'
     name: 'ubuntu'
@@ -27,22 +16,17 @@ steps:
   - id: 'terraform init'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["init"]
-    dir: '/terraform/gcp/modules/network/tests'
+    dir: '/tests'
 
   - id: 'terraform worspace new'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["workspace", "new", "$PROJECT_ID"]
-    dir: '/terraform/gcp/modules/network/tests'
-
-  - id: 'ls command'
-    name: 'ubuntu'
-    args: ["ls"]
-    dir: '/terraform/gcp/modules/network/tests'
+    dir: '/tests'
 
   - id: 'terraform apply'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["apply", "--auto-approve"]
-    dir: '/terraform/gcp/modules/network/tests'
+    dir: '/tests'
 
   - id: 'make attributes.yaml'
     name: 'ubuntu'
