--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -4,14 +4,7 @@ steps:
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", "terraform/gcp/modules/network/tests/main/", "."]
-
-  - id: 'ls command tests'
-    name: 'ubuntu'
-    volumes:
-      - name: 'test'
-        path: '/tests'
-    args: ["ls", "tests"]
+    args: ["cp", "-r", "terraform/gcp/modules/network/tests/main/*", "."]
 
   - id: 'ls command tests'
     name: 'ubuntu'
@@ -33,7 +26,7 @@ steps:
   - id: 'terraform apply'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["apply", "--auto-approve"]
-    dir: '/tests'
+    dir: '/terraform/gcp/modules/network/tests'
 
   - id: 'make attributes.yaml'
     name: 'ubuntu'
