--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", "terraform/gcp/modules/network/tests/main/*", "."]
+    args: ["cp", "-r", "terraform/gcp/modules/network/tests/main/", "."]
 
   - id: 'ls command tests'
     name: 'ubuntu'
