--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -12,6 +12,7 @@ steps:
       - name: 'test'
         path: '/tests'
     args: ["ls"]
+    dir: '/tests'
 
   - id: 'terraform init'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
