--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -4,7 +4,35 @@ steps:
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", "terraform/gcp/modules/network/tests/main/", "."]
+    args: ["cp", "-r", "terraform/gcp/modules/network/tests/main/terraform.tf", "."]
+
+  - id: 'copy'
+    name: 'ubuntu'
+    volumes:
+      - name: 'test'
+        path: '/tests'
+    args: ["cp", "-r", "terraform/gcp/modules/network/tests/main/main.tf", "."]
+
+  - id: 'copy'
+    name: 'ubuntu'
+    volumes:
+      - name: 'test'
+        path: '/tests'
+    args: ["cp", "-r", "terraform/gcp/modules/network/tests/test-codes/make.sh", "."]
+
+  - id: 'copy'
+    name: 'ubuntu'
+    volumes:
+      - name: 'test'
+        path: '/tests'
+    args: ["cp", "-r", "terraform/gcp/modules/network/tests/test-codes/inspec.yml", "."]
+
+  - id: 'copy'
+    name: 'ubuntu'
+    volumes:
+      - name: 'test'
+        path: '/tests'
+    args: ["cp", "-r", "terraform/gcp/modules/network/tests/test-codes/controls", "."]
 
   - id: 'ls command tests'
     name: 'ubuntu'
@@ -12,7 +40,7 @@ steps:
       - name: 'test'
         path: '/tests'
     args: ["ls"]
-    dir: '/main'
+    dir: '/tests'
 
   - id: 'terraform init'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
@@ -27,22 +55,22 @@ steps:
   - id: 'terraform apply'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["apply", "--auto-approve"]
-    dir: '/terraform/gcp/modules/network/tests'
+    dir: '/tests'
 
   - id: 'make attributes.yaml'
     name: 'ubuntu'
     args: ["sh", "make.sh"]
-    dir: '/terraform/gcp/modules/network/tests'
+    dir: '/tests'
 
   - id: "packer build"
     name: 'gcr.io/$PROJECT_ID/inspec'
-    args: ["exec", "./test-codes/", "-t", "gcp://", "--input-file", "attributes.yaml", "--chef-license", "accept"]
-    dir: '/terraform/gcp/modules/network/tests'
+    args: ["exec", ".", "-t", "gcp://", "--input-file", "attributes.yaml", "--chef-license", "accept"]
+    dir: '/tests'
 
   - id: 'terraform destroy'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["destroy", "--force"]
-    dir: '/terraform/gcp/modules/network/tests'
+    dir: '/tests'
 
 timeout: 3600s
 substitutions:
