--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -5,6 +5,15 @@ steps:
       - name: 'test'
         path: '/tests'
     args: ["cp", "-r", "terraform/gcp/modules/network/tests/main/terraform.tf", "."]
+      
+
+  - id: 'ls command tests'
+    name: 'ubuntu'
+    volumes:
+      - name: 'test'
+        path: '/tests'
+    args: ["ls"]
+    dir: '/main'
 
   - id: 'terraform init'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
