--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -1,11 +1,17 @@
 steps:
-  - id: 'copy'
+  - id: 'copy terraform.tf'
     name: 'ubuntu'
     volumes:
       - name: 'test'
         path: '/tests'
     args: ["cp", "-r", "terraform/gcp/modules/network/tests/main/terraform.tf", "."]
-      
+
+  - id: 'copy main.tf'
+    name: 'ubuntu'
+    volumes:
+      - name: 'test'
+        path: '/tests'
+    args: ["cp", "-r", "terraform/gcp/modules/network/tests/main/main.tf", "."]
 
   - id: 'ls command tests'
     name: 'ubuntu'
