[mod] delete new workspace

--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -57,6 +57,13 @@ steps:
     name: 'ubuntu'
     args: ["sh", "make.sh"]
 
+  - id: 'ls command tests'
+    name: 'ubuntu'
+    volumes:
+      - name: 'test'
+        path: '/tests'
+    args: ["ls"]
+
   - id: "inspec exec"
     name: 'gcr.io/$PROJECT_ID/inspec'
     args: ["exec", ".", "-t", "gcp://", "--input-file", "attributes.yaml", "--chef-license", "accept"]
