--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -45,6 +45,10 @@ steps:
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["init"]
 
+  - id: 'terraform worspace select'
+    name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
+    args: ["workspace", "select", "$PROJECT_ID"]
+
   - id: 'terraform apply'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["apply", "--auto-approve"]
