--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -18,7 +18,7 @@ steps:
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", "terraform/gcp/modules/network/tests/main/main.tf", "."]
+    args: ["cp", "-r", '$_TERRAFORM_PATH/main.tf', "."]
 
   - id: 'terraform init'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
@@ -44,3 +44,4 @@ timeout: 3600s
 substitutions:
   _TERRAFORM_VERSION: 0.13.0
   _INSPEC_PATH: ./terraform/gcp/modules/network/tests/test-codes
+  _TERRAFORM_PATH: ./terraform/gcp/modules/network/tests/main
