--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -4,21 +4,21 @@ steps:
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", "terraform/gcp/modules", "."]
+    args: ["cp", "-r", $_TERRAFORM_MODULE_PATH , "."]
 
   - id: 'copy terraform.tf'
     name: 'ubuntu'
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", "terraform/gcp/modules/network/tests/main/terraform.tf", "."]
+    args: ["cp", "-r", '$_TERRAFORM_FILE_PATH/terraform.tf', "."]
 
   - id: 'copy main.tf'
     name: 'ubuntu'
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", '$_TERRAFORM_PATH/main.tf', "."]
+    args: ["cp", "-r", '$_TERRAFORM_FILE_PATH/main.tf', "."]
 
   - id: 'terraform init'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
@@ -44,4 +44,5 @@ timeout: 3600s
 substitutions:
   _TERRAFORM_VERSION: 0.13.0
   _INSPEC_PATH: ./terraform/gcp/modules/network/tests/test-codes
-  _TERRAFORM_PATH: ./terraform/gcp/modules/network/tests/main
+  _TERRAFORM_FILE_PATH: ./terraform/gcp/modules/network/tests/main
+  _TERRAFORM_MODULE_PATH: ./terraform/gcp/modules
