--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -20,6 +20,27 @@ steps:
         path: '/tests'
     args: ["cp", "-r", '$_TERRAFORM_FILE_PATH/main.tf', "."]
 
+  - id: 'copy make file'
+    name: 'ubuntu'
+    volumes:
+      - name: 'test'
+        path: '/tests'
+    args: ["cp", "-r", '$_INSPEC_PATH/make.sh', "."]
+
+  - id: 'make attributes.yaml'
+    name: 'ubuntu'
+    volumes:
+      - name: 'test'
+        path: '/tests'
+    args: ["sh", "make.sh"]
+
+  - id: 'sed attributes.yaml'
+    name: 'ubuntu'
+    volumes:
+      - name: 'test'
+        path: '/tests'
+    args: ["sed","-i", "-e", "s/PJ_ID/$PROJECT_ID/g", "attributes.yaml"]
+
   - id: 'terraform init'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["init"]
@@ -34,7 +55,7 @@ steps:
 
   - id: "inspec exec"
     name: 'chef/inspec'
-    args: ["exec", '$_INSPEC_PATH' , "-t", "gcp://", "--input-file", '$_INSPEC_PATH/attributes.yml', "--chef-license", "accept"]
+    args: ["exec", '$_INSPEC_PATH' , "-t", "gcp://", "--input-file", 'attributes.yaml', "--chef-license", "accept"]
 
   - id: 'terraform destroy'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
