--- a/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/cloudbuild.yaml
@@ -41,6 +41,13 @@ steps:
         path: '/tests'
     args: ["sed","-i", "-e", "s/PJ_ID/$PROJECT_ID/g", "attributes.yaml"]
 
+  - id: 'cat attributes.yaml'
+    name: 'ubuntu'
+    volumes:
+      - name: 'test'
+        path: '/tests'
+    args: ["cat", "attributes.yaml"]
+
   - id: 'terraform init'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["init"]
