--- a/terraform/gcp/modules/network/tests/cloudbuild/golang_sdk_test.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/golang_sdk_test.yaml
@@ -46,7 +46,7 @@ steps:
         path: '/tests'
     args: ["go", "get", "google.golang.org/api/compute/v1"]
     env:
-      - 'GOPATH=./go'
+      - 'GOPATH=.go'
 
   - id: "testing"
     name: 'golang'
@@ -55,7 +55,7 @@ steps:
         path: '/tests'
     args: ["go", "test", $_TEST_PATH, '-v']
     env:
-      - 'GOPATH=./go'
+      - 'GOPATH=.go'
 
   - id: 'terraform destroy'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
