[mod] checking current directory path

--- a/terraform/gcp/modules/network/tests/cloudbuild/golang_sdk_test.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/golang_sdk_test.yaml
@@ -39,6 +39,10 @@ steps:
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["apply", "--auto-approve"]
 
+  - id: 'chake current path'
+    name: 'ubuntu'
+    args: ["pwd"]
+
   - id: "adding compute module"
     name: 'golang'
     volumes:
