[mod] GOPATHを絶対パスで指定

--- a/terraform/gcp/modules/network/tests/cloudbuild/golang_sdk_test.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/golang_sdk_test.yaml
@@ -39,10 +39,6 @@ steps:
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["apply", "--auto-approve"]
 
-  - id: 'chake current path'
-    name: 'ubuntu'
-    args: ["pwd"]
-
   - id: "adding compute module"
     name: 'golang'
     volumes:
@@ -50,7 +46,7 @@ steps:
         path: '/tests'
     args: ["go", "get", "google.golang.org/api/compute/v1"]
     env:
-      - 'GOPATH=.go'
+      - 'GOPATH=/workspace/.go'
 
   - id: "testing"
     name: 'golang'
@@ -59,7 +55,7 @@ steps:
         path: '/tests'
     args: ["go", "test", $_TEST_PATH, '-v']
     env:
-      - 'GOPATH=.go'
+      - 'GOPATH=/workspace/.go'
 
   - id: 'terraform destroy'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
