[mod] GCP_PROJECTの環境変数の追加

--- a/terraform/gcp/modules/network/tests/cloudbuild/golang_sdk_test.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/golang_sdk_test.yaml
@@ -56,6 +56,7 @@ steps:
     args: ["go", "test", $_TEST_PATH, '-v']
     env:
       - 'GOPATH=/workspace/.go'
+      - 'GCP_PROJECT=$PROJECT_ID'
 
   - id: 'terraform destroy'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
