[mod] 環境変数をTerratestの仕様に沿って変更

--- a/terraform/gcp/modules/network/tests/cloudbuild/terratest_test.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/terratest_test.yaml
@@ -46,7 +46,7 @@ steps:
         path: '/tests'
     args: ["go", "test", $_TEST_PATH, '-v']
     env:
-      - 'GCP_PROJECT=$PROJECT_ID'
+      - 'GOOGLE_PROJECT=$PROJECT_ID'
 
   - id: 'terraform destroy'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
