[mod] cloudbuildのterratest実行パスの指定

--- a/terraform/gcp/modules/network/tests/cloudbuild/terratest_test.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/terratest_test.yaml
@@ -47,6 +47,7 @@ steps:
     args: ["go", "test", $_TEST_PATH, '-v']
     env:
       - 'GOOGLE_PROJECT=$PROJECT_ID'
+      - 'TERRATEST_PATH=$_TEST_PATH'
 
   - id: 'terraform destroy'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
