[mod] 共通変数になるよう各タスクのパスを変更

--- a/terraform/gcp/modules/network/tests/cloudbuild/terratest_test.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/terratest_test.yaml
@@ -11,35 +11,35 @@ steps:
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", '$_TERRAFORM_FILE_PATH/main.tf', "."]
+    args: ["cp", "-r", '$_FILE_PATH/main/main.tf', "."]
 
-  - id: 'copy make file'
+  - id: 'copy make terraform makeup shell'
     name: 'ubuntu'
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", $_START_UP_PATH, "."]
+    args: ["cp", "-r", '$_FILE_PATH/main/make.sh', "./main_terraform_make.sh"]
+
+  - id: 'make terraform.tf'
+    name: 'ubuntu'
+    volumes:
+      - name: 'test'
+        path: '/tests'
+    args: ["sh", "main_terraform_make.sh", $PROJECT_ID, $_MODULE_PREFIX]
 
   - id: 'copy terratest make file'
     name: 'ubuntu'
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", '${_TEST_PATH}/make.sh', "./terratest_make.sh"]
-
-  - id: 'make attributes.yaml and terraform.tf'
-    name: 'ubuntu'
-    volumes:
-      - name: 'test'
-        path: '/tests'
-    args: ["sh", "make.sh", $PROJECT_ID, $_MODULE_PREFIX]
+    args: ["cp", "-r", '$_FILE_PATH/terratest/make.sh', "./terratest_make.sh"]
 
   - id: 'make terraform.tf at terratest'
     name: 'ubuntu'
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["sh", "terratest_make.sh", $PROJECT_ID, '${_TEST_PATH}/terraform.tf']
+    args: ["sh", "terratest_make.sh", $PROJECT_ID, '$_FILE_PATH/terratest/terraform.tf']
 
   - id: 'terraform init'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
@@ -58,10 +58,7 @@ steps:
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["go", "test", $_TEST_PATH, '-v']
-    env:
-      - 'GOOGLE_PROJECT=$PROJECT_ID'
-      - 'TERRATEST_PATH=$_TEST_PATH'
+    args: ["go", "test", '$_FILE_PATH/terratest', '-v']
 
   - id: 'terraform destroy'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
@@ -71,8 +68,6 @@ timeout: 3600s
 substitutions:
   _IMG_VER: 2.1.6
   _TERRAFORM_VERSION: 0.13.0
-  _START_UP_PATH: ./terraform/gcp/modules/network/tests/make.sh
-  _TEST_PATH: ./terraform/gcp/modules/network/tests/terratest/
-  _TERRAFORM_FILE_PATH: ./terraform/gcp/modules/network/tests/main
-  _TERRAFORM_MODULE_PATH: ./terraform/gcp/modules
   _MODULE_PREFIX: network
+  _TERRAFORM_MODULE_PATH: ./terraform/gcp/modules
+  _FILE_PATH: ./terraform/gcp/modules/network/tests
