--- a/terraform/gcp/modules/network/tests/cloudbuild/shunit_test.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/shunit_test.yaml
@@ -11,21 +11,21 @@ steps:
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", '$_TERRAFORM_FILE_PATH/main.tf', "."]
+    args: ["cp", "-r", '$_FILE_PATH/main/main.tf', "."]
 
-  - id: 'copy make file'
+  - id: 'copy make terraform makeup shell'
     name: 'ubuntu'
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["cp", "-r", $_START_UP_PATH, "."]
+    args: ["cp", "-r", '$_FILE_PATH/main/make.sh', "./main_terraform_make.sh"]
 
-  - id: 'make attributes.yaml and terraform.tf'
+  - id: 'make terraform.tf'
     name: 'ubuntu'
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["sh", "make.sh", $PROJECT_ID, $_MODULE_PREFIX]
+    args: ["sh", "main_terraform_make.sh", $PROJECT_ID, $_MODULE_PREFIX]
 
   - id: 'terraform init'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
@@ -41,7 +41,7 @@ steps:
 
   - id: "test"
     name: 'gcr.io/$PROJECT_ID/shunit2-cloudsdk:${_IMG_VER}'
-    args: ["sh", '$_SHUNIT_PATH/testNetworkModule.sh' ]
+    args: ["sh", '$_FILE_PATH/shunit/main.sh', '$_FILE_PATH/shunit' ]
 
   - id: 'terraform destroy'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
@@ -51,8 +51,6 @@ timeout: 3600s
 substitutions:
   _IMG_VER: 2.1.6
   _TERRAFORM_VERSION: 0.13.0
-  _START_UP_PATH: ./terraform/gcp/modules/network/tests/make.sh
-  _SHUNIT_PATH: ./terraform/gcp/modules/network/tests/shunit
-  _TERRAFORM_FILE_PATH: ./terraform/gcp/modules/network/tests/main
-  _TERRAFORM_MODULE_PATH: ./terraform/gcp/modules
   _MODULE_PREFIX: network
+  _TERRAFORM_MODULE_PATH: ./terraform/gcp/modules
+  _FILE_PATH: ./terraform/gcp/modules/network/tests
