--- a/terraform/gcp/modules/network/tests/cloudbuild/golang_sdk_test.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/golang_sdk_test.yaml
@@ -25,7 +25,7 @@ steps:
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["sh", "main_terraform_make.sh", $PROJECT_ID, $_MODULE_PREFIX]
+    args: ["sh", "main_terraform_make.sh", $PROJECT_ID, $_MODULE_PREFIX, $_TERRAFORM_VERSION]
 
   - id: 'terraform init'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
