--- a/terraform/gcp/modules/network/tests/cloudbuild/inspec_test.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/inspec_test.yaml
@@ -32,7 +32,7 @@ steps:
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["sh", "main_terraform_make.sh", $PROJECT_ID, $_MODULE_PREFIX]
+    args: ["sh", "main_terraform_make.sh", $PROJECT_ID, $_MODULE_PREFIX, $_TERRAFORM_VERSION]
 
   - id: 'make attributes.yaml'
     name: 'ubuntu'
