--- a/terraform/gcp/modules/network/tests/cloudbuild/terratest_test.yaml
+++ b/terraform/gcp/modules/network/tests/cloudbuild/terratest_test.yaml
@@ -25,7 +25,7 @@ steps:
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["sh", "main_terraform_make.sh", $PROJECT_ID, $_MODULE_PREFIX]
+    args: ["sh", "main_terraform_make.sh", $PROJECT_ID, $_MODULE_PREFIX, $_TERRAFORM_VERSION]
 
   - id: 'copy terratest make file'
     name: 'ubuntu'
@@ -39,7 +39,7 @@ steps:
     volumes:
       - name: 'test'
         path: '/tests'
-    args: ["sh", "terratest_make.sh", $PROJECT_ID, '$_FILE_PATH/terratest/terraform.tf']
+    args: ["sh", "terratest_make.sh", $PROJECT_ID, '$_FILE_PATH/terratest/terraform.tf', $_TERRAFORM_VERSION]
 
   - id: 'terraform init'
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
